2013-11-13  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/arm/cache.c (probe_caches): Move asm part to ...
	* grub-core/kern/arm/cache_armv6.S: ... here. This allows this
	asm to stay in arm even if surrounding is thumb.

2013-11-13  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/arm/misc.S: Add __muldi3 and __aeabi_lmul. Those
	helper functions are needed for thumb.

2013-11-13  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/diskfilter.c (grub_diskfilter_make_raid): Make
	level / 3 division explicitly unsigned. Saves few bytes.

2013-11-13  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/zfs/zfs.c (ZAP_LEAF_NUMCHUNKS): Use unsigned arithmetics.

2013-11-13  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/normal/datetime.c (grub_get_weekday): Use if rather than
	division.

2013-11-13  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/uboot/init.c: Move grub_uboot_machine_type and
	grub_uboot_boot_data to asm part.

2013-11-13  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/arm/uboot/startup.S: Remove = by replacing with
	literal load.
	(grub_uboot_syscall): Save/restore r9 and align stack.

2013-11-13  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/arm/cache.S: Replace = with explicit litteral load.

2013-11-13  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/symbol.h (END) [__arm__]: New macros. Replace all .end
	occurencies with END.

2013-11-13  Colin Watson  <cjwatson@ubuntu.com>

	* util/grub-editenv.c (help_filter, argp): Document how to delete
	the whole environment block.
	Reported by Dan Jacobson.  Fixes Debian bug #726265.

2013-11-13  Colin Watson  <cjwatson@ubuntu.com>

	* docs/grub.texi (Internationalisation, Supported kernels): Fix
	sectioning.

2013-11-13  Josh Triplett <josh@joshtriplett.org>

	* grub-core/normal/term.c (grub_set_more): Use bool logic rather than
	increment/decrement.

2013-11-13  Vladimir Serbinenko  <phcoder@gmail.com>
